# subagent-worktree-mcp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile.toml  README.md  RUST_LIBRARIES_ANALYSIS.md  deny.toml  rust-toolchain.toml  test_rmcp.rs
.github/workflows/: ci.yml
src/: agent_monitor.rs  doc_generator.rs  git_operations.rs  lib.rs  main.rs  subagent_spawner.rs
tests/: agent_monitor_tests.rs  cursor_agent_integration_tests.rs  documentation_tests.rs  e2e_mcp_tests.rs  git_operations_tests.rs  integration_tests.rs  subagent_spawner_tests.rs
